--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -6,6 +6,12 @@
 </head>
 <body>
     <h1>Розклад пар для КНУ</h1>
-    <a href="/faculty">Список всіх факультетів</a>
+    <ul>
+    <li><a href="/faculty">Список всіх факультетів</a></li>
+    <li></li><a href="/faculty/1">Мехмат</a></li>
+    <li><a href="/department/1">Кафедра математичного аналізу</a></li>
+    <li><a href="/group/2">2 група математики</a></li>
+    <li><a href="/group/1/actualTimeTable">Розклад для 1 групи математики</a></li>
+    </ul>
 </body>
 </html>
