admin controller, guest controller modified

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -7,11 +7,11 @@
 <body>
     <h1>Розклад пар для КНУ</h1>
     <ul>
-    <li><a href="/faculty">Список всіх факультетів</a></li>
-        <li><a href="/faculty/1">Мехмат</a></li>
-    <li><a href="/department/1">Кафедра математичного аналізу</a></li>
-    <li><a href="/group/2">2 група математики</a></li>
-    <li><a href="/group/1/actualTimeTable">Розклад для 1 групи математики</a></li>
+    <li><a href="/guest/faculty">Список всіх факультетів</a></li>
+        <li><a href="/guest/faculty/1">Мехмат</a></li>
+    <li><a href="/guest/department/1">Кафедра математичного аналізу</a></li>
+    <li><a href="/guest/group/2">2 група математики</a></li>
+    <li><a href="/guest/group/1/actualTimeTable">Розклад для 1 групи математики</a></li>
     </ul>
 </body>
 </html>
