--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -1,17 +1,46 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="ua">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
     <title>КНУ Розклад</title>
+    
+    <!-- Import Bootstrap -->
+    <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+    <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
+
+    <!-- Import Angular -->
+    <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.3.14/angular.min.js"></script>
+
+    <!-- Import js -->
+    <script src="js/app.js"></script>
+    <script src="js/pageController.js"></script>
+    <script src="js/facultiesController.js"></script>
 </head>
 <body>
-    <h1>Розклад пар для КНУ</h1>
-    <ul>
-    <li><a href="/guest/faculty">Список всіх факультетів</a></li>
-        <li><a href="/guest/faculty/1">Мехмат</a></li>
-    <li><a href="/guest/department/1">Кафедра математичного аналізу</a></li>
-    <li><a href="/guest/group/2">2 група математики</a></li>
-    <li><a href="/guest/group/1/actualTimeTable">Розклад для 1 групи математики</a></li>
+<div class="container" ng-app="knuTimeTable" ng-controller="pageController">
+
+    <!-- Jumbotron -->
+    <div class="jumbotron">        
+        <h1>КНУ Розклад</h1>
+        <p>Перший інтерактивний розклад пар для студентів КНУ ім. Тараса Шевченка</p>        
+    </div>
+    
+    <!-- Menu -->
+    <div class="page-header">    
+    <ul class="nav nav-pills">
+    <li ng-class="activeOn('main')"><a href ng-click="goTo('main')">Головна сторінка</a></li>
+    <li ng-class="activeOn('faculties')"><a href ng-click="goTo('faculties')">Список факультетів</a></li>
+    <li ng-class="activeOn('signIn')"><a href ng-click="goTo('signIn')">Увійти</a></li>    
     </ul>
+    </div>    
+
+    <!-- Pages -->    
+    <div ng-show="isActive('main')" ng-include="'main.html'"></div>    
+    <div ng-show="isActive('faculties')" ng-include="'faculties.html'"></div>    
+    <div ng-show="isActive('signIn')" ng-include="'signIn.html'"></div>    
+</div> 
 </body>
 </html>
