--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -20,6 +20,8 @@
     <script src="js/app.js"></script>
     <script src="js/controllers.js"></script>
     <script src="js/services.js"></script>
+    <script src="js/filters.js"></script>
+    <script src="js/directives.js"></script>
 </head>
 <body>
 <div class="container" ng-app="knuTimeTable">
