--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -22,6 +22,7 @@
     <script src="js/services.js"></script>
     <script src="js/filters.js"></script>
     <script src="js/directives.js"></script>
+    <script src="js/strings.js"></script>
 </head>
 <body>
 <div class="container" ng-app="knuTimeTable">
