--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -18,8 +18,8 @@
 
     <!-- Import own js -->
     <script src="js/app.js"></script>
-    <script src="js/controllers.js"></script>
-    <script src="js/admin-controllers.js"></script>
+    <script src="js/controllers/guest-controllers.js"></script>
+    <script src="js/controllers/faculty-admin-controller.js"></script>
     <script src="js/services.js"></script>
     <script src="js/filters.js"></script>
     <script src="js/directives.js"></script>
