post groups, pairs new/edit/delete. Editing complete

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -21,6 +21,7 @@
     <script src="js/controllers/guest-controllers.js"></script>
     <script src="js/controllers/faculty-admin-controller.js"></script>
     <script src="js/controllers/group-admin-controller.js"></script>
+    <script src="js/controllers/pair-admin-controller.js"></script>
     <script src="js/services.js"></script>
     <script src="js/filters.js"></script>
     <script src="js/directives.js"></script>
